<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back_ground_board"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/logo"
                android:padding="10dp" />

            <TableLayout
                android:id="@+id/tableLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_1" >

                <TableRow
                    android:id="@+id/editIp_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp" >

                    <TextView
                        android:id="@+id/editIp_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/Ip"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/editIp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/Ip"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/editTextUserNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/login_userName"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/editTextUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/login_userName"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/editTextPassTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/login_pass"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/editTextPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/login_pass"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/tableRe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/bt_1"
                android:padding="20dp" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp" >

                    <TextView
                        android:id="@+id/regiterUserNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/login_userName"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/regiterUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/login_userName"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/regiterPassTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/login_pass"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/regiterPass"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/login_pass"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/regiterPass2Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/login_re_pass"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/regiterPass2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/login_re_pass"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp" >

                    <TextView
                        android:id="@+id/regiterPhoneTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="10dp"
                        android:text="@string/Phone_Number"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/regiterPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bt_5"
                        android:hint="@string/Phone_Number"
                        android:inputType="number"
                        android:maxLength="16"
                        android:padding="10dp"
                        android:textColor="#ffffff" />
                </TableRow>
            </TableLayout>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <Button
                    android:id="@+id/buttonRegiter"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/bt_custom3"
                    android:text="@string/Chat"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />

                <Button
                    android:id="@+id/buttonLogin"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:background="@drawable/bt_custom3"
                    android:text="Login"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="10dp" >

                <LinearLayout
                    android:id="@+id/bt_facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:paddingRight="10dp" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/face_book"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/bt_facebook_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Go to FaceBook"
                        android:textColor="#333333"
                        android:textSize="10dp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bt_call"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/call_icon"
                        android:padding="10dp" />

                    <TextView
                        android:id="@+id/bt_call_Tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Call for support"
                        android:textColor="#333333"
                        android:textSize="10dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/version_client"
        android:textColor="#ffffff"
        android:textSize="12dp" />

    <LinearLayout
        android:id="@+id/ngon_ngu_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp" >

        <ImageView
            android:id="@+id/ngon_ngu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/vn"
            android:padding="10dp" />

        <TextView
            android:id="@+id/ngon_nguTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Vn"
            android:textColor="#333333"
            android:textSize="10dp" />
    </LinearLayout>

</FrameLayout>